dnl Process this file with autoconf to produce a configure script.

AC_INIT(README)
dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE(widelands, 0.0.15)

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER(src/config.h)

AC_SUBST(VERSION)

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

AC_CANONICAL_HOST
AC_ARG_ENABLE(libsdl, [  --enable-libsdl    Use libsdl (yes)], libsdl_try=no, libsdl_try=yes)

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC
AC_PROG_CXX

dnl Checks for libraries.
if test "$libsdl_try" = "yes" ; then 
		  AM_PATH_SDL(1.0.0, has_sdl=1, has_sdl=0 )
		  if test  ! $has_sdl ; then
					 AC_MSG_WARN(There is no libsdl found! e
					 xit!!);
					 exit -1;
		  fi;
fi


dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_SUBST(LIBSDL_LIB)
AC_SUBST(src pkgdatadir)

AC_OUTPUT([Makefile src/Makefile wffcreate/Makefile wwfcreate/Makefile])
